--- a/index.html
+++ b/index.html
@@ -40,11 +40,14 @@
 <body>
   <div id="container">
     <div id="control-panel">
+      <button id="pause-btn">Pause</button>
+      <button id="theme-toggle">Dark/Light</button>
       <h3>Planet Speed Controls</h3>
       <div id="planet-controls">
         <!-- Sliders will be injected here by JS -->
       </div>
     </div>
+    <div id="tooltip" style="display:none; position:fixed; pointer-events:none; background:rgba(30,30,30,0.95); color:#fff; padding:6px 12px; border-radius:6px; font-size:14px; z-index:100;"></div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/three@0.153.0/build/three.min.js"></script>
   <script src="main.js"></script>
