--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <div id="control-panel">
       <button id="pause-btn">Pause</button>
       <button id="theme-toggle">Dark/Light</button>
+      <button id="top-view-btn">Top View</button>
+      <button id="reset-view-btn">Reset View</button>
       <h3>Planet Speed Controls</h3>
       <div id="planet-controls">
         <!-- Sliders will be injected here by JS -->
